# tree-sitter-ats

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.zed/: settings.json
bindings/c/: tree-sitter-ats.pc.in
bindings/c/tree_sitter/: tree-sitter-ats.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ats/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAtsTests/: TreeSitterAtsTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: 01a.txt  01b.txt  01c.txt  02b.txt  03b.txt  03c.txt
